Fixed scrollbar flickering

--- a/assets/css/colors-blue.css
+++ b/assets/css/colors-blue.css
@@ -14,6 +14,7 @@
 #sidebar {
 	background: rgb(26, 27, 35);
 	transition: all 0.3s;
+	overflow: hidden;
 }
 
 #sidebar:hover {
